# azure-openai-langchain-python

./: Dockerfile  README.md  joke.py  meteo.py  movies.py  pyproject.toml  test.ps1
